# HiveGovernor

./: .gitignore  README.md  aufgabenliste.md  pyproject.toml  requirements-dev.txt
plans/: MATHEMATICAL_DECONSTRUCTION.md  T00.yaml  T22.yaml  T30.yaml  T31.yaml
swarm_moi/: __init__.py  clustering.py  governor.py  monitor.py  reporter.py  router.py
tests/: conftest.py  test_clustering_simple.py  test_enforcer_simulated_diff.py  test_governor_breaks_pingpong_new.py  test_governor_cooldown.py  test_governor_inhibition.py  test_monitor_coactivations.py  test_monitor_loop_pairs.py  test_repo_structure.py  test_reporter_schema.py  test_router_hysteresis_effect.py  test_router_inhibit_integration.py  test_router_init.py  test_status_smoke.py
tools/: enforce_guards.py  proof_of_value.py  status.sh
